moves arrows for more readability, fixes pointers

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -11,19 +11,19 @@
   }
 
 .arrows {
-    width: 30px;
+    width: 40px;
     height: 72px;
     position: absolute;
-    left: 40px;
-    bottom: 5px;
+    right: 60px;
+    bottom: 20px;
 }
 
 .arrows path {
     stroke: var(--dark);
     fill: transparent;
-    stroke-width: 1px;  
-    animation: arrow 2s infinite;
-    -webkit-animation: arrow 2s infinite; 
+    stroke-width: 3px;  
+    animation: arrow 2.5s infinite;
+    -webkit-animation: arrow 2.5s infinite; 
 }
 
 @media screen and (max-width: 1024px) {
@@ -40,41 +40,47 @@
             stroke: var(--dark);
             fill: transparent;
             stroke-width: 1px;  
-            animation: arrow 2s infinite;
-            -webkit-animation: arrow 2s infinite; 
+            animation: arrow 2.5s infinite;
+            -webkit-animation: arrow 2.5s infinite; 
         }
 }
 
 @keyframes arrow
 {
-0% {opacity:0}
-40% {opacity:1}
-80% {opacity:0}
-100% {opacity:0}
+    0% {opacity:0}
+     40% {opacity:0} /*change back to 1 */
+    80% {opacity:1}/*change back to 0*/
+    100% {opacity:0}
 }
 
 @-webkit-keyframes arrow /*Safari and Chrome*/
 {
-0% {opacity:0}
-40% {opacity:1}
-80% {opacity:0}
-100% {opacity:0}
+    0% {opacity:0}
+    40% {opacity:0}
+    80% {opacity:1}
+    100% {opacity:0}
 }
 
 .arrows path.a1 {
+animation-delay:-1.5s;
+-webkit-animation-delay:-1.5s; /* Safari 和 Chrome */
+}
+
+.arrows path.a2 {
 animation-delay:-1s;
 -webkit-animation-delay:-1s; /* Safari 和 Chrome */
 }
 
-.arrows path.a2 {
-animation-delay:-0.5s;
--webkit-animation-delay:-0.5s; /* Safari 和 Chrome */
+.arrows path.a3 { 
+animation-delay:0.5s;
+-webkit-animation-delay:0.5s; /* Safari 和 Chrome */
 }
 
-.arrows path.a3 { 
-animation-delay:0s;
--webkit-animation-delay:0s; /* Safari 和 Chrome */
+.arrows path.a4 { 
+    animation-delay:0s;
+    -webkit-animation-delay:0s; 
 }
+    
 
 .intro-container{
     display: grid;
@@ -143,6 +149,11 @@ animation-delay:0s;
    align-items: baseline;
    text-align: center;
 }
+
+.card img {
+ margin-bottom: 10px;
+}
+
 .card h2{
     color: var(--primary);
     margin-bottom: 60px;
@@ -151,6 +162,7 @@ animation-delay:0s;
     color: white;
     line-height: 98.5%;
 }
+
 
 .mission-container img{
     height: 91px;
@@ -232,12 +244,11 @@ animation-delay:0s;
     transform: scaleX(-0.7) rotate(-20deg);
     filter: invert(100%);
     z-index: 1;
-    
 }
 
 h2.pointer{
-    margin-left: -130px;
-    margin-top: -130px;
+    margin-left: -150px;
+    margin-top: -100px;
     z-index: 10;
     transform: scaleX(1.3) rotate(-30deg);
 }
